k8s-235/apps/jenkins/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  externalName: jenkins-int.nhackindustries.com
  type: ExternalName
